# Celero

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  ISSUE_TEMPLATE.md  README.md  README.txt  SECURITY.md  SUPPORT.md  appveyor.yml  buildspec.yml  config.cmake.in  license.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml
cmake/: FindCelero.cmake
examples/: DemoComparison.cpp  DemoMultithread.cpp  DemoParameterPassing.cpp  DemoPimpl.cpp  DemoSimple.cpp  DemoSimpleJUnit.cpp  DemoSleep.cpp  DemoSort.cpp  DemoTransform.cpp
experiments/: CMakeLists.txt
experiments/DemoDoNotOptimizeAway/: CMakeLists.txt  DemoDoNotOptimizeAway.cpp
experiments/DemoFileWrite/: CMakeLists.txt  DemoFileWrite.cpp
experiments/DemoMultithread/: CMakeLists.txt  DemoMultithread.cpp
experiments/DemoSimple/: CMakeLists.txt  DemoSimple.cpp
experiments/DemoSimpleJUnit/: CMakeLists.txt  DemoSimpleJUnit.cpp
experiments/DemoSleep/: CMakeLists.txt  DemoSleep.cpp
experiments/DemoToString/: CMakeLists.txt  DemoToString.cpp
experiments/DemoTransform/: CMakeLists.txt  DemoTransform.cpp
experiments/ExperimentCompressBools/: CMakeLists.txt  ExperimentCompressBools.cpp
experiments/ExperimentCostDoNotOptimizeAway/: CMakeLists.txt  ExperimentCostOfDoNotOptimizeAway.cpp
experiments/ExperimentCostOfPimpl/: CMakeLists.txt  ExperimentCostOfPimpl.cpp
experiments/ExperimentCostSharedPtr/: CMakeLists.txt  ExperimentCostOfSharedPtr.cpp  osg_ref_ptr.h
experiments/ExperimentNVP/: .gitignore  CMakeLists.txt  ExperimentNVP.cpp  input.json  input.xml
experiments/ExperimentParameterPassing/: CMakeLists.txt  ExperimentParameterPassing.cpp
experiments/ExperimentParticles/: CMakeLists.txt  ExperimentParticles.cpp  Particles.h
experiments/ExperimentSimpleComparison/: CMakeLists.txt  ExperimentSimpleComparison.cpp
experiments/ExperimentSortingRandomInts/: CMakeLists.txt  ExperimentSortingRandomInts.cpp
experiments/ExperimentSortingRandomIntsUDM/: CMakeLists.txt  ExperimentSortingRandomIntsUDM.cpp
experiments/ExperimentSortingRandomIntsWithUDM/: CMakeLists.txt  ExperimentSortingRandomIntsWithUDM.cpp
include/celero/: Archive.h  Benchmark.h  BenchmarkInfo.h  Callbacks.h  Celero.h  CommandLine.h  Console.h  Distribution.h  Exceptions.h  Executor.h  Experiment.h  ExperimentResult.h  Export.h  Factory.h  FileReader.h  GenericFactory.h  JUnit.h  Memory.h  Pimpl.h  PimplImpl.h  Print.h  Result.h  ResultTable.h  Statistics.h  TestFixture.h  TestVector.h  ThreadLocal.h  ThreadTestFixture.h  Timer.h  ToString.h  UserDefinedMeasurement.h  UserDefinedMeasurementCollector.h  UserDefinedMeasurementTemplate.h  Utilities.h
src/: Archive.cpp  Benchmark.cpp  BenchmarkInfo.cpp  Callbacks.cpp  Celero.cpp  CeleroTest.cpp  Console.cpp  DemoComparison.cpp  DemoSimple.cpp  DemoSort.cpp  DemoTransform.cpp  Distribution.cpp  Exceptions.cpp  Executor.cpp  Experiment.cpp  ExperimentResult.cpp  JUnit.cpp  Memory.cpp  Print.cpp  Result.cpp  ResultTable.cpp  Statistics.cpp  TestFixture.cpp  TestVector.cpp  ThreadTestFixture.cpp  Timer.cpp  ToString.cpp  UserDefinedMeasurement.cpp  UserDefinedMeasurementCollector.cpp  Utilities.cpp
test/: Archive.test.cpp  Benchmark.test.cpp  CMakeLists.txt  Callbacks.test.cpp  Celero.test.cpp  Distribution.test.cpp  Executor.test.cpp  ExperimentResult.test.cpp  Memory.test.cpp  Statistics.test.cpp  TestFixture.test.cpp  TestVector.test.cpp  Timer.test.cpp  UserDefinedMeasurementCollector.test.cpp  Utilities.test.cpp  benchmarkingTest.cpp
test/celero/: Benchmark.test.cpp  BenchmarkInfo.test.cpp  Utilities.test.cpp
test/gtest-1.7.0/: CMakeLists.txt
